# esp32-maag-components

./: CMakeLists.txt  maag_i2c_device.cpp  maag_spi_device.cpp  maag_webserver.cpp
include/: maag_i2c_device.h  maag_spi_device.h
maag_wifi/: maag_webserver.cpp
